@@ -4,6 +4,12 @@ Kodeine Change log
 * = Autre / Divers / Inclassable...
 
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+2013-02-01 (5.1.1)
+Fic bug qd plusieurs clics sur zone editable
+
+2013-02-01 (5.1.0)
++ Installation Designer V2
+
 2013-01-02 (5.0.12)
 - Suppression des images
 
